cmake_minimum_required(VERSION 3.16)
project(leetcode101)

set(CMAKE_CXX_STANDARD 20)



add_executable(leetcode101  main.cpp cspiration/array/238.cpp cspiration/array/152.cpp cspiration/array/228.cpp cspiration/array/163.cpp cspiration/array/088.cpp cspiration/array/075.cpp cspiration/array/283.cpp cspiration/array/376.cpp cspiration/array/324.cpp cspiration/array/033.cpp cspiration/array/081.cpp)