cmake_minimum_required(VERSION 3.16)
project(leetcode101)

set(CMAKE_CXX_STANDARD 20)



add_executable(leetcode101  main.cpp week/tweek046/t046-01.cpp week/tweek046/t046-02.cpp week/tweek046/t046-03.cpp week/tweek046/t046-04.cpp d/d0221.cpp week/week229/229-01.cpp week/week229/229-02.cpp week/week229/229-03.cpp week/week229/229-04.cpp week/week229/d.cpp week/week229/d.h)